# wepps

./: LICENSE  README.md  pyproject.toml
sample_project/: README.md  main.py
sample_project/web_apps/demo/: demo.md  demo.py  index.md
src/frontend/: package.json  vite.config.ts
src/frontend/src/: App.tsx  StaticElements.tsx
src/frontend/src/infobar/: InfoBar.tsx
src/frontend/src/stages/: Docs.tsx  DocsComponent.tsx  Interfaces.ts  Plots.tsx  PlotsStage.tsx  Settings.tsx  SettingsStage.tsx  StageContext.tsx  Stages.tsx
src/frontend/src/stages/parameters/: Boolean.tsx  Enumeration.tsx  Float.tsx  FloatList.tsx  Integer.tsx  NumberField.tsx  Parameter.tsx  ParameterList.tsx  PositiveFloat.tsx  PositiveInteger.tsx  StrictlyPositiveInteger.tsx
src/wepps/: app.py  dev-documentation.md  site.py  utilities.py
src/wepps/stage/: parameters.py  stages.py  utils.py
src/wepps/static/: manifest.json
src/wepps/static/assets/: main-d34577cc.css
src/wepps/templates/: app.html  index.html
