[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wepps"
version = "0.2.0"
license = {text = "BSD-2-Clause"}
authors = [
  { name="Michel Krispin", email="michel.krispin@gmail.com" },
  { name='Thibaut Lunet', email='thibaut.lunet@tuhh.de' },
]
description = "A web app framework to connect python projects to a simple but interactive frontend."
requires-python = ">=3.7"
readme = 'README.md'
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy~=1.23",
    "flask~=2.2",
    "plotly~=5.13",
    "mistune~=2.0",
    "emoji~=2.6",
]


[project.urls]
"Homepage" = "https://github.com/Parallel-in-Time/wepps"

[tool.hatch.build]
exclude = ["frontend*"]
