[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wepps"
version = "0.3.0"
license = {text = "BSD-2-Clause"}
authors = [
  { name="Michel Krispin", email="michel.krispin@gmail.com" },
  { name='Thibaut Lunet', email='thibaut.lunet@tuhh.de' },
]
description = "A web app framework to connect python projects to a simple but interactive frontend."
requires-python = ">=3.7"
readme = 'README.md'
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "flask",
    "plotly",
    "mistune",
    "emoji",
]


[project.urls]
"Homepage" = "https://github.com/Parallel-in-Time/wepps"

[tool.hatch.build]
exclude = ["frontend*"]
